# LLM-LMM-lecture

./: pyproject.toml
chapter02/: basic.py
chapter03/: basic_retrieval.py
chapter05/01/: chatbot.py
chapter05/02/: enums.py
chapter06/embedding/: embedding.py
chapter06/memory/: chains.py  searches.py
chapter06/vectordb/: enums.py  vectordb.py
chapter06/websearch/: chains.py
database/: dongjookim.txt
database/chroma/: chroma.sqlite3
part1/chapter02/: basic_api.py
part1/chapter03/: basic_inference.py
part1/chapter05/01/: enums.py
part1/chapter05/02/: chatbot.py
part1/chapter06/memory/: chatbot.py  enums.py
part1/chapter06/vectordb/: chains.py  chatbot.py
part1/chapter06/websearch/: chatbot.py  enums.py
part1/database/: products.txt
part1/webapp/: chat.py  chat_for_chains.py
part2/chapter02/: dalle.py  tts.py  whisper.py
part2/chapter04/clip01/: dalle.py  tale_maker.py
part2/chapter04/clip02/: chains.py  enums.py
part2/chapter04/clip03/: enums.py  tale_maker.py  tts.py
part2/webapp/: 1.tale_maker_for_dalle copy.py  2.tale_maker_for_whisper.py  3.tale_maker_for_tts.py  whisper.py
part3/chapter03/: visions.py
